fix(header): hide h1 element on small screens

--- a/src/app/shared/header/header.scss
+++ b/src/app/shared/header/header.scss
@@ -213,3 +213,8 @@ a {
     display: none;
   }
 }
+@media (max-width: 1024px) {
+  h1 {
+    display: none;
+  }
+}
